--- a/gui/window.ui
+++ b/gui/window.ui
@@ -358,6 +358,9 @@
       <property name="singleStep">
        <double>0.020000000000000</double>
       </property>
+      <property name="value">
+       <double>1.000000000000000</double>
+      </property>
      </widget>
      <widget class="QLabel" name="label_current_unit">
       <property name="geometry">
