--- a/gui/pref_window.ui
+++ b/gui/pref_window.ui
@@ -517,7 +517,7 @@
       <rect>
        <x>340</x>
        <y>260</y>
-       <width>261</width>
+       <width>101</width>
        <height>16</height>
       </rect>
      </property>
@@ -630,6 +630,22 @@
      </property>
      <property name="text">
       <string>Only Modify two sides</string>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBox_disable_pillars">
+     <property name="geometry">
+      <rect>
+       <x>450</x>
+       <y>260</y>
+       <width>151</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Disable Pillars</string>
      </property>
      <property name="checked">
       <bool>false</bool>
@@ -837,8 +853,8 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>621</width>
-      <height>293</height>
+      <width>100</width>
+      <height>30</height>
      </rect>
     </property>
     <attribute name="label">
